2026-02-18  G. Branden Robinson <g.branden.robinson@gmail.com>

	* m.tmac (ML): Handle explicitly empty second argument.

	Fixes <https://savannah.gnu.org/bugs/?68065>.  Problem
	introduced by me in commit 512b749f4e, 2 July 2024.

2026-02-18  G. Branden Robinson <g.branden.robinson@gmail.com>

	Add regression test for Savannah #68065.  Marked list (`ML`)
	macro calls were not treating an explicitly empty second
	argument (text indentation amount) as implying the computed
	default.  This matters when a third argument, the presence of
	which suppresses vertical spacing before each list item, is
	desired.

	* tests/ML-accepts-empty-second-argument.sh: Do it.
	* mm.am (mm_TESTS): Run test.

2026-02-18  G. Branden Robinson <g.branden.robinson@gmail.com>

	* m.tmac (ML): Refactor to ease further bug fixing.  Call the
	`LB` macro that this macro wraps in one place, not three.
	Introduce new temporary `li*pad-amount` register to manage the
	third argument we pass to `LB`, which varies depending on
	whether `ML` itself is given a (numeric expression as a) second
	argument or not.

2026-02-18  G. Branden Robinson <g.branden.robinson@gmail.com>

	* m.tmac (LB): Fix spurious warnings.  Refactor to clarify
	logic, since I proved inadequate to the task of penetrating its
	dialect before.  Document expected range of fourth macro
	argument.  Assign register format to registers used as list item
	enumerators in one place instead of three.  Introduce new
	temporary register `li*mf-is-mark` to elucidate the peculiar
	status of macro's fifth argument as an untagged union type.
	{Why is it that _bad_ ideas are adopted so much more
	aggressively than _good_ ones?}  Rearrange logic that parses
	this fifth argument (tracked as `li*mf`) for validity as a
	register format.  Replace highly specific check for `\&` as an
	argument using GNU troff's "string comparison" extension with a
	simple test for nonempty formatted output.  It's more